--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Link para o seu arquivo de estilos customizado. Garanta que 'style.css' está no lugar certo! -->
     <link rel="stylesheet" href="style.css" />
+    <!-- Commit helper: comentário adicionado para facilitar commit -->
 </head>
 
 <body>
@@ -379,7 +380,7 @@
             <!-- Bicicleta Container -->
             <div id="bicicleta-container" class="veiculo-container" style="display: none;">
                 <h2>🚲 Bicicleta</h2>
-                <img id="bicicleta-img" src="imagens/bicicleta.png" alt="Bicicleta" class="veiculo-img" />
+                <img id="bicicleta-img" src="imagens/bike.avif" alt="Bicicleta" class="veiculo-img" />
                 <p><strong>Modelo:</strong> <span id="bicicleta-modelo">Bicicleta Padrão</span></p>
                 <p><strong>Cor:</strong> <span id="bicicleta-cor">Vermelha</span></p>
                 <p><strong>Status:</strong> <span id="bicicleta-status" class="status-parada">Parada</span></p>
