--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Garagem Inteligente Unificada</title>
+    <title>GARAGEM DA LU</title>
     <!-- Inclui o Bootstrap CSS para estilização base, garantindo um visual limpo e responsivo -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
     <!-- Link para o seu arquivo de estilos customizado. Garanta que 'style.css' está no lugar certo! -->
@@ -17,12 +18,25 @@
     <div id="app-container" class="container-fluid"> 
         <!-- Barra Lateral de Navegação (Sidebar): Contém o menu principal da aplicação -->
         <nav id="sidebar">
-            <h2>Garagem</h2>
+            <h2>GARAGEM DA LU</h2>
+            <div style="text-align:center;margin-bottom:10px;">
+                <button id="open-auth-btn" class="btn btn-sm btn-outline-light">Entrar / Registrar</button>
+            </div>
             <ul id="sidebar-menu" class="list-unstyled">
                 <!-- Item de menu para adicionar um novo veículo (ação controlada pelo JavaScript) -->
                 <li class="sidebar-action"><a href="#" data-action="mostrarFormAddVeiculo">➕ Adicionar Veículo</a></li>
                 <!-- Aqui é onde os links para cada veículo adicionado serão inseridos dinamicamente pelo JavaScript -->
             </ul>
+            <!-- Account info shown when user is logged in -->
+            <div id="sidebar-account" style="display:none; padding:10px; border-top:1px solid rgba(255,255,255,0.05);">
+                <div style="font-size:0.9rem; margin-bottom:6px;">Informações sobre a conta</div>
+                <div style="font-size:0.8rem; margin-bottom:6px;" id="account-name">-</div>
+                <div class="d-flex" style="gap:6px;">
+                    <button id="sidebar-account-view" class="btn btn-sm btn-outline-light">Ver dados</button>
+                    <button id="sidebar-account-edit" class="btn btn-sm btn-primary">Editar</button>
+                    <button id="sidebar-logout-btn" class="btn btn-sm btn-danger">Sair</button>
+                </div>
+            </div>
         </nav>
 
         <!-- Área de Conteúdo Principal: Exibe as informações detalhadas dos veículos, formulários, e resultados das APIs -->
@@ -32,8 +46,78 @@
 
             <!-- Mensagem de Boas-vindas: Exibida inicialmente e escondida quando o usuário seleciona um veículo ou um formulário -->
             <div id="welcome-message">
-                <h1>Bem-vinda à sua Garagem Inteligente!</h1>
+                <h1>Bem-vindo à GARAGEM DA LU!</h1>
                 <p>Use o menu à esquerda para adicionar um novo veículo ou ver detalhes dos veículos existentes.</p>
+            </div>
+
+            <!-- FULLSCREEN AUTH: Tela de login/registro/visitante (aparece antes do restante do app) -->
+            <div id="auth-overlay" class="auth-overlay">
+                <div class="auth-container">
+                    <div class="auth-left">
+                        <h2>Bem-vinda à <span class="brand-highlight">GARAGEM DA LU</span></h2>
+                        <p>Gerencie seus veículos, agende manutenções e acompanhe o histórico de cada automóvel. Faça login para ver apenas os veículos da sua conta.</p>
+                        <p>Se preferir explorar sem salvar alterações, clique em <strong>Visitante</strong> para navegar em modo somente leitura.</p>
+                        <ul>
+                            <li>Visualização limpa e moderna</li>
+                            <li>Registro seguro com verificação por email (simulado em dev)</li>
+                            <li>Modo Visitante para testar sem criar conta</li>
+                        </ul>
+                    </div>
+                    <div class="auth-right">
+                        <div class="auth-tabs">
+                            <button id="tab-login" class="active" type="button">Entrar</button>
+                            <button id="tab-register" type="button">Registrar</button>
+                            <button id="tab-visitor" type="button">Visitante</button>
+                        </div>
+
+                        <div id="tab-content">
+                            <div id="auth-forms">
+                            <form id="login-form" class="auth-form">
+                                <h3>Entrar</h3>
+                                <input type="email" id="login-email" placeholder="Email" required />
+                                <div class="input-with-icon">
+                                    <input type="password" id="login-password" placeholder="Senha" required />
+                                    <button type="button" class="toggle-password" data-target="login-password" aria-label="Mostrar senha">👁️</button>
+                                </div>
+                                <button id="login-submit-btn" type="submit" class="primary" onclick="_doLogin(event)">Entrar</button>
+                            </form>
+
+                            <form id="register-form" class="auth-form" style="display:none;">
+                                <h3>Criar Conta</h3>
+                                <input type="text" id="register-name" placeholder="Seu nome completo" required />
+                                <input type="email" id="register-email" placeholder="Email" required />
+                                <div class="input-with-icon">
+                                    <input type="password" id="register-password" placeholder="Senha" required />
+                                    <button type="button" class="toggle-password" data-target="register-password" aria-label="Mostrar senha">👁️</button>
+                                </div>
+                                <div class="input-with-icon">
+                                    <input type="password" id="register-password-confirm" placeholder="Confirme a senha" required />
+                                    <button type="button" class="toggle-password" data-target="register-password-confirm" aria-label="Mostrar senha">👁️</button>
+                                </div>
+                                <div id="password-strength" class="password-strength">
+                                    <div class="bar"></div>
+                                    <div class="label">Força da senha</div>
+                                </div>
+                                <div class="auth-note">Será enviado um link de verificação por email (simulado no modo de desenvolvimento).</div>
+                                <button id="register-submit-btn" type="submit" class="primary" onclick="_doRegister(event)">Registrar</button>
+                            </form>
+
+                            <div id="visitor-pane" class="auth-form" style="display:none;">
+                                <h3>Entrar como Visitante</h3>
+                                <p class="auth-note">Navegue em modo leitura. Não poderá criar, editar ou excluir dados.</p>
+                                <button id="visitor-btn" class="secondary" type="button">Entrar como Visitante</button>
+                            </div>
+                            </div>
+
+                            <!-- painel exibido quando usuário está logado -->
+                            <div id="auth-logged" style="display:none; margin-top:10px; text-align:center;">
+                                <p>Logado como <strong id="auth-user-email">Usuário</strong></p>
+                                <button id="logout-btn" class="secondary" type="button">Sair</button>
+                            </div>
+                        </div>
+                        <div id="auth-feedback" class="auth-feedback" style="display:none;"></div>
+                    </div>
+                </div>
             </div>
 
             <!-- Formulário para Adicionar Novo Veículo: Inicia escondido e é exibido via JavaScript -->
@@ -131,16 +215,12 @@
                 <p><strong>Ano:</strong> <span id="carro-ano">---</span></p>
                 <p><strong>Placa:</strong> <span id="carro-placa">---</span></p>
                 <p><strong>Cor:</strong> <span id="carro-cor">Cinza</span></p>
-                <p><strong>Status:</strong> <span id="carro-status" class="status-desligado">Desligado</span></p>
-                <p><strong>Velocidade:</strong> <span id="carro-velocidade">0</span> km/h</p>
+                <p><strong>Criado por:</strong> <span id="carro-owner">-</span></p>
+                <!-- Status/Velocidade removed -->
                 <!-- Seção de Botões de Ação para o veículo -->
                 <div class="actions mb-3">
-                    <button data-acao="ligar" data-tipo="carro" class="btn btn-sm btn-success">Ligar</button>
-                    <button data-acao="desligar" data-tipo="carro" class="btn btn-sm btn-danger">Desligar</button>
-                    <button data-acao="acelerar" data-tipo="carro" class="btn btn-sm btn-info">Acelerar</button>
-                    <button data-acao="frear" data-tipo="carro" class="btn btn-sm btn-warning">Frear</button>
-                    <button data-acao="buzinar" data-tipo="carro" class="btn btn-sm btn-secondary">Buzinar</button>
-                    <!-- NOVO: BOTÕES DE EDITAR E EXCLUIR -->
+                    <!-- Botões de ações de controle removidos (ligar/acelerar/frear/buzinar). -->
+                    <!-- Mantemos apenas Editar / Excluir para gestão do veículo -->
                     <button data-acao="editar" data-tipo="carro" class="btn btn-sm btn-primary">Editar</button>
                     <button data-acao="excluir" data-tipo="carro" class="btn btn-sm btn-danger">Excluir</button>
                 </div>
@@ -195,18 +275,10 @@
                 <p><strong>Ano:</strong> <span id="esportivo-ano">---</span></p>
                 <p><strong>Placa:</strong> <span id="esportivo-placa">---</span></p>
                 <p><strong>Cor:</strong> <span id="esportivo-cor">Preto</span></p>
-                <p><strong>Status:</strong> <span id="esportivo-status" class="status-desligado">Desligado</span></p>
-                <p><strong>Velocidade:</strong> <span id="esportivo-velocidade">0</span> km/h</p>
-                <p><strong>Turbo:</strong> <span id="esportivo-turbo">Desativado</span></p>
+                <p><strong>Criado por:</strong> <span id="esportivo-owner">-</span></p>
+                <!-- Status/Velocidade/Turbo removed -->
                 <div class="actions mb-3">
-                    <button data-acao="ligar" data-tipo="esportivo" class="btn btn-sm btn-success">Ligar</button>
-                    <button data-acao="desligar" data-tipo="esportivo" class="btn btn-sm btn-danger">Desligar</button>
-                    <button data-acao="acelerar" data-tipo="esportivo" class="btn btn-sm btn-info">Acelerar</button>
-                    <button data-acao="frear" data-tipo="esportivo" class="btn btn-sm btn-warning">Frear</button>
-                    <button data-acao="buzinar" data-tipo="esportivo" class="btn btn-sm btn-secondary">Buzinar</button>
-                    <button data-acao="ativarTurbo" data-tipo="esportivo" class="btn btn-sm btn-warning">Turbo ON</button>
-                    <button data-acao="desativarTurbo" data-tipo="esportivo" class="btn btn-sm btn-outline-warning">Turbo OFF</button>
-                    <!-- NOVO: BOTÕES DE EDITAR E EXCLUIR -->
+                    <!-- Controles dinâmicos removidos (turbo, acelerar, buzina, ligar). -->
                     <button data-acao="editar" data-tipo="esportivo" class="btn btn-sm btn-primary">Editar</button>
                     <button data-acao="excluir" data-tipo="esportivo" class="btn btn-sm btn-danger">Excluir</button>
                 </div>
@@ -259,20 +331,11 @@
                 <p><strong>Ano:</strong> <span id="caminhao-ano">---</span></p>
                 <p><strong>Placa:</strong> <span id="caminhao-placa">---</span></p>
                 <p><strong>Cor:</strong> <span id="caminhao-cor">Branco</span></p>
-                <p><strong>Status:</strong> <span id="caminhao-status" class="status-desligado">Desligado</span></p>
-                <p><strong>Velocidade:</strong> <span id="caminhao-velocidade">0</span> km/h</p>
+                <p><strong>Criado por:</strong> <span id="caminhao-owner">-</span></p>
+                <!-- Status/Velocidade removed -->
                 <p><strong>Carga:</strong> <span id="caminhao-carga">0</span> / <span id="caminhao-capacidade">5000</span> kg</p>
                 <div class="actions mb-3">
-                    <button data-acao="ligar" data-tipo="caminhao" class="btn btn-sm btn-success">Ligar</button>
-                    <button data-acao="desligar" data-tipo="caminhao" class="btn btn-sm btn-danger">Desligar</button>
-                    <button data-acao="acelerar" data-tipo="caminhao" class="btn btn-sm btn-info">Acelerar</button>
-                    <button data-acao="frear" data-tipo="caminhao" class="btn btn-sm btn-warning">Frear</button>
-                    <button data-acao="buzinar" data-tipo="caminhao" class="btn btn-sm btn-secondary">Buzinar</button>
-                    <label for="caminhao-carga-input" class="form-label d-inline-block ms-3 me-2" style="width: auto;">Carga(kg):</label>
-                    <input type="number" id="caminhao-carga-input" class="form-control form-control-sm d-inline-block" style="width: 100px;" min="1" step="1" />
-                    <button data-acao="carregar" data-tipo="caminhao" class="btn btn-sm btn-outline-primary">Carregar</button>
-                    <button data-acao="descarregar" data-tipo="caminhao" class="btn btn-sm btn-outline-info">Descarregar</button>
-                    <!-- NOVO: BOTÕES DE EDITAR E EXCLUIR -->
+                    <!-- Operações de carga e controles de movimento removidos. -->
                     <button data-acao="editar" data-tipo="caminhao" class="btn btn-sm btn-primary">Editar</button>
                     <button data-acao="excluir" data-tipo="caminhao" class="btn btn-sm btn-danger">Excluir</button>
                 </div>
@@ -319,21 +382,15 @@
             <!-- Moto Container -->
             <div id="moto-container" class="veiculo-container" style="display: none;">
                 <h2>🏍️ Moto</h2>
-                <img id="moto-img" src="imagens/moto.png" alt="Moto" class="veiculo-img" />
+                <img id="moto-img" src="imagens/moto.jpg" alt="Moto" class="veiculo-img" />
                 <p><strong>Modelo:</strong> <span id="moto-modelo">Moto Padrão</span></p>
                 <p><strong>Marca:</strong> <span id="moto-marca">---</span></p>
                 <p><strong>Ano:</strong> <span id="moto-ano">---</span></p>
                 <p><strong>Placa:</strong> <span id="moto-placa">---</span></p>
                 <p><strong>Cor:</strong> <span id="moto-cor">Azul</span></p>
-                <p><strong>Status:</strong> <span id="moto-status" class="status-desligado">Desligado</span></p>
-                <p><strong>Velocidade:</strong> <span id="moto-velocidade">0</span> km/h</p>
+                <p><strong>Criado por:</strong> <span id="moto-owner">-</span></p>
+                <!-- Status/Velocidade removed -->
                 <div class="actions mb-3">
-                    <button data-acao="ligar" data-tipo="moto" class="btn btn-sm btn-success">Ligar</button>
-                    <button data-acao="desligar" data-tipo="moto" class="btn btn-sm btn-danger">Desligar</button>
-                    <button data-acao="acelerar" data-tipo="moto" class="btn btn-sm btn-info">Acelerar</button>
-                    <button data-acao="frear" data-tipo="moto" class="btn btn-sm btn-warning">Frear</button>
-                    <button data-acao="buzinar" data-tipo="moto" class="btn btn-sm btn-secondary">Buzinar</button>
-                    <!-- NOVO: BOTÕES DE EDITAR E EXCLUIR -->
                     <button data-acao="editar" data-tipo="moto" class="btn btn-sm btn-primary">Editar</button>
                     <button data-acao="excluir" data-tipo="moto" class="btn btn-sm btn-danger">Excluir</button>
                 </div>
@@ -383,13 +440,9 @@
                 <img id="bicicleta-img" src="imagens/bike.avif" alt="Bicicleta" class="veiculo-img" />
                 <p><strong>Modelo:</strong> <span id="bicicleta-modelo">Bicicleta Padrão</span></p>
                 <p><strong>Cor:</strong> <span id="bicicleta-cor">Vermelha</span></p>
-                <p><strong>Status:</strong> <span id="bicicleta-status" class="status-parada">Parada</span></p>
-                <p><strong>Velocidade:</strong> <span id="bicicleta-velocidade">0</span> km/h</p>
+                <p><strong>Criado por:</strong> <span id="bicicleta-owner">-</span></p>
+                <!-- Status/Velocidade removed -->
                 <div class="actions mb-3">
-                    <button data-acao="pedalar" data-tipo="bicicleta" class="btn btn-sm btn-success">Pedalar</button>
-                    <button data-acao="frear" data-tipo="bicicleta" class="btn btn-sm btn-warning">Frear</button>
-                    <button data-acao="buzinar" data-tipo="bicicleta" class="btn btn-sm btn-secondary">Buzinar (Campainha)</button>
-                    <!-- NOVO: BOTÕES DE EDITAR E EXCLUIR -->
                     <button data-acao="editar" data-tipo="bicicleta" class="btn btn-sm btn-primary">Editar</button>
                     <button data-acao="excluir" data-tipo="bicicleta" class="btn btn-sm btn-danger">Excluir</button>
                 </div>
@@ -463,13 +516,7 @@
         </main>
     </div>
 
-    <!-- Seus arquivos de som. Verifique se a pasta 'sons/' e os arquivos MP3 estão corretos. -->
-    <audio id="ligar-audio" src="sons/carroligando.mp3"></audio>
-    <audio id="desligar-audio" src="sons/carrodesligando.mp3"></audio>
-    <audio id="acelerar-audio" src="sons/carroacelerando.mp3"></audio>
-    <audio id="frear-audio" src="sons/freio.mp3"></audio>
-    <audio id="buzinar-audio" src="sons/buzina.mp3"></audio>
-    <!-- Adicione referências a outros arquivos de som aqui, se usados em suas classes JS (ex: campainha.mp3, buzina-esportivo.mp3) -->
+    <!-- Recursos de som removidos do frontend por solicitação do usuário. -->
 
     <!-- IMPORTANTE: LINK PARA SEU ARQUIVO JAVASCRIPT PRINCIPAL -->
     <!-- Garanta que o 'src' aponta para o seu arquivo JS principal.
